--- a/img/style/style.css
+++ b/img/style/style.css
@@ -1,4 +1,3 @@
-/* reseteo por defecto los estilos del navegador*/
 * {
     padding: 0;
     margin: 0;
@@ -10,8 +9,6 @@
 }
 
 .contenedor1 {
-    width: 100%;
-    height: 100vh;
     background-image: url(../210995.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -39,6 +36,27 @@
     display: flex;
     justify-content: end;
 
+}
+
+@media (max-width: 768px) {
+    body {
+        background-color: black;
+    }
+
+    .nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+        
+        margin-right: 20px;
+        background-color: black;
+        position: fixed;
+        left: 0;
+        top: 0px;
+        width: 100%;
+        padding: 0;
+        height: 100%;
+        overflow-y: auto;
+    }
 
 }
 
@@ -48,7 +66,6 @@
     align-items: center;
     justify-content: end;
     padding-right: 50px;
-
 
 }
 
@@ -70,9 +87,24 @@
 }
 
 .enlace:hover {
-    background-color: rgb(106, 106, 106);
+    background-color: #df2d2d;
     transition: 0.3s;
+    gap: 2rem;
 }
+
+.boton {
+    background-color: #df2d2d;
+    padding: 5px 10px;
+    border-radius: 7px;
+}
+
+.boton:hover {
+    background-color: #3e3e3e;
+    transition: 0.3s;
+
+}
+
+
 
 .banner {
     width: 100%;
@@ -80,7 +112,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .banner_textos {
@@ -88,6 +120,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 50px 50px;
+    overflow: hidden;
 }
 
 .banner_textos h1 {
