--- a/img/style/style.css
+++ b/img/style/style.css
@@ -1,8 +1,11 @@
+/*Eliminia formato por defecto*/
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
+/*Pagina de inicio (Index.html)*/
 
 .main {
     width: 100%;
@@ -14,6 +17,12 @@
     background-position: center;
     background-size: cover;
 
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .header {
@@ -31,6 +40,10 @@
     padding-top: 10px;
 }
 
+.logo img:hover {
+    transform: scale(1.3);
+}
+
 .nav {
     width: 80%;
     display: flex;
@@ -43,21 +56,23 @@
     padding-right: 20px;
     border: none;
     flex-direction: row;
-
-
+    display: none;
 }
 
 
 @media (max-width: 768px) {
+    .header {
+
+        height: 60px;
+    }
 
 
     .nav {
         top: 0;
         left: 0;
         position: absolute;
-        background-color: black;
-        width: 100%;
-        height: 100%;
+        background-color: rgb(0, 0, 0);
+
         align-items: center;
         justify-content: center;
         ;
@@ -66,9 +81,7 @@
     .nav ul {
         display: flex;
         flex-direction: column;
-
     }
-
 }
 
 .nav ul {
@@ -107,12 +120,12 @@
     background-color: #df2d2d;
     padding: 5px 10px;
     border-radius: 7px;
+    transition: height 2s;
 }
 
 .boton:hover {
-    background-color: #3e3e3e;
-    transition: 0.3s;
-    padding: 8px 10px;
+    background-color: #f2a60e;
+    height: 2px;
 }
 
 .banner {
@@ -121,7 +134,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .banner_textos {
@@ -140,33 +152,28 @@
 }
 
 @media (max-width: 1600px) {
-
     .banner_textos h1 {
         font-size: 160px;
     }
 
     .banner_textos p {
         font-size: 10px;
-
     }
 }
 
 @media (max-width: 1450px) {
-
     .banner_textos h1 {
         font-size: 130px;
     }
 }
 
 @media (max-width: 1230px) {
-
     .banner_textos h1 {
         font-size: 110px;
     }
 }
 
 @media (max-width: 1060px) {
-
     .banner_textos h1 {
         font-size: 90px;
     }
@@ -178,4 +185,130 @@
     text-align: center;
 }
 
-.banner_textos a {}
+/*Pagina Contactanos*/
+.pagina_contacto {
+    background-image: url(../pared.png);
+    background-size: cover;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.web_contact {
+    color: white;
+    font-size: 60px;
+    margin-left: 50px;
+}
+
+.contacto {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 20px;
+}
+
+.contacto img {
+    border-style: ridge;
+    height: 600px;
+    width: auto;
+}
+
+.contacto fieldset {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: 600px;
+    border-radius: 10px;
+    background-color: white;
+    padding: 40px 80px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: black;
+    background: linear-gradient(0deg, rgba(0, 0, 0), rgba(0, 0, 0, 0));
+    height: 200px;
+    color: white;
+    gap: 10px;
+
+}
+
+
+footer .redes {
+    display: flex;
+    gap: 10px;
+}
+
+footer .copyright {
+    text-align: center;
+    margin: 0px;
+}
+
+footer button {
+    border-radius: 30px;
+    border: none;
+    padding: 10px 20px;
+    color: white;
+    background-color: #df2d2d;
+
+}
+
+.contenedor2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #df2d2d;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    margin: 50px;
+    flex-direction: row;
+}
+
+.card {
+    border-radius: 25px;
+    font-size: 30px;
+    height: 300px;
+    width: 400px;
+    padding: 25px;
+    text-align: center;
+}
+
+.quedicen{
+font-size: 60px;
+color: white;
+}
+
+.texto {
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 120px;
+}
+
+h3 {
+    color: white;
+    text-align: center;
+
+}
+
+/*Pagina Productos*/
+
+.carousel-inner{
+    display: flex;
+    justify-content: center;
+    height:600px;
+    width:100vh
+}
+
