--- a/img/style/style.css
+++ b/img/style/style.css
@@ -3,85 +3,44 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 
-/*Pagina de inicio (Index.html)*/
+/*Header*/
 
-.main {
-    width: 100%;
-
-}
-
-.contenedor1 {
-    background-image: url(../210995.jpg);
-    background-position: center;
-    background-size: cover;
-
-}
-
-body {
+header {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-}
-
-.header {
-    background: black;
-    background: linear-gradient(180deg, rgba(0, 0, 0), rgba(0, 0, 0, 0));
-    width: 100%;
+    align-items: center;
     height: 80px;
+}
+
+.menu {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    right: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    z-index: 1000;
+
 }
 
-.logo {
-    width: 20%;
-    padding-left: 50px;
-    padding-top: 10px;
+.logo1 {
+    width: 150px;
 }
 
-.logo img:hover {
-    transform: scale(1.3);
+.logo2 {
+    width: 0;
 }
+
 
 .nav {
+    margin-top: 50px;
     width: 80%;
     display: flex;
     justify-content: end;
-}
-
-.toggle {
-    background: none;
-    color: white;
-    padding-right: 20px;
-    border: none;
-    flex-direction: row;
-    display: none;
-}
-
-
-@media (max-width: 768px) {
-    .header {
-
-        height: 60px;
-    }
-
-
-    .nav {
-        top: 0;
-        left: 0;
-        position: absolute;
-        background-color: rgb(0, 0, 0);
-
-        align-items: center;
-        justify-content: center;
-        ;
-    }
-
-    .nav ul {
-        display: flex;
-        flex-direction: column;
-    }
 }
 
 .nav ul {
@@ -89,23 +48,25 @@ body {
     margin: 0;
     align-items: center;
     justify-content: end;
-    padding-right: 50px;
-
+    
 }
 
 .nav ul li {
-    padding-left: 20px;
-    text-decoration: none;
-    list-style: none;
+    font-size: relative;
+    color: white;
+    display: block;
+    margin: 5px;
 }
 
 .nav ul li a {
     text-decoration-line: none;
     color: white;
     font-size: 24px;
+    padding: 5px;
 }
 
 .enlace {
+    margin: 10px;
     padding: 5px 10px;
     border-radius: 7px;
 }
@@ -124,8 +85,62 @@ body {
 }
 
 .boton:hover {
-    background-color: #f2a60e;
+    background-color: #931919;
     height: 2px;
+}
+
+/*Footer*/
+
+footer {
+    max-width: 1200px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    height: 200px;
+    color: white;
+    gap: 10px;
+}
+
+footer .redes {
+    display: flex;
+    gap: 10px;
+}
+
+footer .copyright {
+    text-align: center;
+    margin: 0px;
+}
+
+footer button {
+    border-radius: 30px;
+    border-color: #ffffff;
+    padding: 10px 20px;
+    color: white;
+    background-color: #df2d2d;
+}
+
+footer button:hover {
+    border-radius: 30px;
+    padding: 10px 20px;
+    color: white;
+    background-color: #fd4040;
+}
+
+/*Pagina de inicio (Index.html)*/
+
+.contenedor1 {
+    background-image: url(../210995.jpg);
+    background-position: center;
+    background-size: cover;
+
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #000000;
 }
 
 .banner {
@@ -150,6 +165,52 @@ body {
     text-align: center;
     padding: 0px 0px;
 }
+
+.contenedor2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #000000;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    margin: 50px;
+    flex-direction: row;
+}
+
+.card {
+    border-radius: 25px;
+    font-size: 30px;
+    height: 300px;
+    width: 400px;
+    padding: 25px;
+    text-align: center;
+}
+
+.quedicen {
+    font-size: 60px;
+    color: white;
+}
+
+.texto {
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 120px;
+}
+
+h3 {
+    color: white;
+    text-align: center;
+
+}
+
 
 @media (max-width: 1600px) {
     .banner_textos h1 {
@@ -225,105 +286,46 @@ body {
     padding: 40px 80px;
 }
 
-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: black;
-    background: linear-gradient(0deg, rgba(0, 0, 0), rgba(0, 0, 0, 0));
-    height: 200px;
-    color: white;
-    gap: 10px;
 
-}
-
-
-footer .redes {
-    display: flex;
-    gap: 10px;
-}
-
-footer .copyright {
-    text-align: center;
-    margin: 0px;
-}
-
-footer button {
-    border-radius: 30px;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    background-color: #df2d2d;
-
-}
-
-.contenedor2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #df2d2d;
-    height: 100vh;
-    background-position: center;
-    background-size: cover;
-}
-
-.cards {
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
-    margin: 50px;
-    flex-direction: row;
-}
-
-.card {
-    border-radius: 25px;
-    font-size: 30px;
-    height: 300px;
-    width: 400px;
-    padding: 25px;
-    text-align: center;
-}
-
-.quedicen {
-    font-size: 60px;
-    color: white;
-}
-
-.texto {
-    color: white;
-    font-size: 30px;
-    text-align: center;
-    margin-top: 120px;
-}
-
-h3 {
-    color: white;
-    text-align: center;
-
-}
 
 /*Pagina Productos*/
 .pagina_productos {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #df2d2d;
-    background-size: cover;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
-}
-.mainprod{
-   display: flex;
-   flex-direction: row;
-}
+
 .productos {
     color: white;
     font-size: 60px;
-    margin-left: 50px;
+    margin-top: 50px;
+}
+
+.swiper-button-prev::after {
+    font-size: 25px;
 
 }
 
-.carousel-item :active{
-   background-image: 100px;
+.swiper-button-next::after {
+    font-size: 25px;
 }
 
+.swiper-button-prev {
+    color: #ffffff;
+}
+
+.swiper-button-next {
+    color: #ffffff;
+}
+
+.swiper-pagination-bullet {
+    background-color: white;
+    opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: rgb(255, 3, 3);
+    opacity: 1;
+}
+
+/*Menú responsive*/
