--- a/style/style.css
+++ b/style/style.css
@@ -1,207 +1,576 @@
 /*Eliminia formato por defecto*/
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 
 /*Header*/
 /*Menu desktop*/
-
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
 }
 
 .logo1 {
-    width: 100px;
-    margin-top: 50px;
+  width: 100px;
+  margin-top: 50px;
 }
 
 .nav {
-    margin-top: 50px;
-    width: 80%;
-    display: flex;
-    justify-content: end;
+  margin-top: 50px;
+  width: 80%;
+  display: flex;
+  justify-content: end;
 }
 
 .nav ul {
-    display: flex;
-    margin: 0;
-    align-items: center;
-    justify-content: end;
-
+  display: flex;
+  margin: 0;
+  align-items: center;
+  justify-content: end;
 }
 
 .nav ul li {
-    font-size: relative;
-    color: white;
-    display: block;
-    margin: 5px;
+  font-size: relative;
+  color: white;
+  display: block;
+  margin: 5px;
 }
 
 .nav ul li a {
-    text-decoration-line: none;
-    color: white;
-    font-size: 24px;
-    padding: 5px;
+  text-decoration-line: none;
+  color: white;
+  font-size: 24px;
+  padding: 5px;
 }
 
 .enlace {
-    margin: 10px;
-    padding: 5px 10px;
-    border-radius: 7px;
+  margin: 10px;
+  padding: 5px 10px;
+  border-radius: 7px;
 }
 
 .enlace:hover {
-    background-color: #df2d2d;
-    transition: 0.3s;
-    gap: 2rem;
+  background-color: #df2d2d;
+  transition: 0.3s;
+  gap: 2rem;
 }
 
 .boton {
-    background-color: #df2d2d;
-    padding: 5px 10px;
-    border-radius: 7px;
-    transition: height 2s;
+  background-color: #df2d2d;
+  padding: 5px 10px;
+  border-radius: 7px;
+  transition: height 2s;
 }
 
 .boton:hover {
-    background-color: #931919;
-    height: 2px;
+  background-color: #931919;
+  height: 2px;
 }
 
 /*Menu responsive*/
 .logo2 {
-    width: 0;
+  width: 0;
 }
 
 #menu {
-    display: none;
+  display: none;
 }
 
 .menu-ico {
-    width: 25px;
+  width: 25px;
 }
 
 .label {
-    cursor: pointer;
-    display: none;
+  cursor: pointer;
+  display: none;
 }
 
 .menu {
-    position: absolute;
-    top: 20px;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    z-index: 1000;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  z-index: 1000;
 }
-
-
-@media (max-width:991px) {
-    .menu {
-        padding: 20px;
-        justify-content: space-between;
-    }
-}
-
 
 /*Footer*/
-
 footer {
-    max-width: 1200px;
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 200px;
-    color: white;
-    gap: 10px;
+  max-width: 1200px;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 200px;
+  color: white;
+  gap: 10px;
 }
 
 footer .redes {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 footer .copyright {
-    text-align: center;
-    margin: 0px;
+  text-align: center;
+  margin: 0px;
 }
 
 footer button {
-    border-radius: 30px;
-    border-color: #ffffff;
-    padding: 10px 20px;
-    color: white;
-    background-color: #df2d2d;
+  border-radius: 30px;
+  border-color: #ffffff;
+  padding: 10px 20px;
+  color: white;
+  background-color: #df2d2d;
 }
 
 footer button:hover {
-    border-radius: 30px;
-    padding: 10px 20px;
-    color: white;
-    background-color: #fd4040;
+  border-radius: 30px;
+  padding: 10px 20px;
+  color: white;
+  background-color: #fd4040;
 }
 
 /*Pagina de inicio (Index.html)*/
-
 .contenedor1 {
-    max-width: 1200px;
-    margin: 0 auto;
-    
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
+.fondo_index {
+  background-image: url(../img/210996.png);
+  background-position: center;
+  background-size: cover;
 }
-.fondo_index{
-    background-image: url(../img/210996.png);
-    background-position: center;
-    background-size: cover;   
-}
-.menu-ico{
-    display: none;
+
+.menu-ico {
+  display: none;
 }
 
 .body_index {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #000000;
+}
+
+.banner {
+  width: 100%;
+  height: calc(100vh - 60px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner_textos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 50px 0;
+  overflow: hidden;
+}
+
+.banner_textos h1 {
+  color: white;
+  font-size: 150px;
+  text-align: center;
+  padding: 0px 0px;
+}
+
+.contenedor2 {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #000000;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  margin: 50px;
+  flex-wrap: wrap;
+}
+
+.card {
+  display: table;
+  border-radius: 25px;
+  font-size: 30px;
+  height: 300px;
+  width: 320px;
+  padding: 25px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.card p {
+  display: table-cell;
+  font-size: 26px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.quedicen {
+  font-size: 60px;
+  color: white;
+}
+
+.texto {
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 120px;
+}
+
+h3 {
+  color: white;
+  text-align: center;
+}
+
+.banner_textos p {
+  color: white;
+  font-size: 30px;
+  text-align: center;
+}
+
+/*Pagina Contactanos*/
+.fondo_contacto {
+  background-image: url(../img/pared.png);
+  background-size: cover;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.pagina_contacto {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.web_contact {
+  color: white;
+  font-size: 60px;
+  margin-top: 50px;
+}
+
+.contacto {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+
+.contacto img {
+  border-style: ridge;
+  height: 600px;
+  width: auto;
+}
+
+.contacto fieldset {
+  font-size: large;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 600px;
+  height: 600px;
+  border-radius: 10px;
+  background-color: #c9c7c7;
+  padding: 40px 80px;
+}
+
+#nombre {
+  border-radius: 8px;
+  height: 40px;
+  width: 520px;
+}
+
+#mail {
+  border-radius: 8px;
+  height: 40px;
+  width: 520px;
+}
+
+#mensaje {
+  border-radius: 8px;
+  width: 520px;
+}
+
+.boton_enviar {
+  margin-top: 10px;
+  border-radius: 8px;
+  height: 50px;
+  width: 100px;
+}
+
+/*Pagina Productos*/
+.pagina_productos {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.fondo_productos {
+  background-color: #000000;
+  background-size: cover;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.productos {
+  color: white;
+  font-size: 60px;
+  margin-top: 50px;
+}
+
+.swiper-button-prev::after {
+  font-size: 25px;
+}
+
+.swiper-button-next::after {
+  font-size: 25px;
+}
+
+.swiper-button-prev {
+  color: #ffffff;
+}
+
+.swiper-button-next {
+  color: #ffffff;
+}
+
+.swiper-pagination-bullet {
+  background-color: white;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: rgb(255, 3, 3);
+  opacity: 1;
+}
+
+/*Pagina Tiendas*/
+.pagina_tiendas {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.grupo_tiendas {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.tiendas {
+  color: white;
+  font-size: 60px;
+  margin-top: 50px;
+}
+
+.fondo_tiendas {
+  background-color: #000000;
+  background-size: cover;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.tienda1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.tienda2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.tienda3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.tien1 {
+  width: 350px;
+}
+
+.tien2 {
+  width: 350px;
+}
+
+.tien3 {
+  width: 350px;
+}
+
+.geo {
+  color: white;
+  font-size: 24px;
+}
+
+/*Pagina Nosotros*/
+.pagina_nosotros {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.nosotros {
+  color: white;
+  font-size: 60px;
+  margin-top: 50px;
+}
+
+.fondo_nosotros {
+  background-color: #000000;
+  background-size: cover;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.principal {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.beatles {
+  width: 600px;
+}
+
+.descripcion {
+  margin-left: 50px;
+  font-size: 24px;
+  color: white;
+}
+
+/*Responsive*/
+@media (max-width: 422px) {
+  /*Nav*/
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 80px;
+    background-color: #000000;
+  }
+  .logo1 {
+    display: 50px;
+    position: fixed;
+    left: 10px;
+  }
+  .nav {
+    margin-top: 50px;
+    width: 80%;
+    display: flex;
+    justify-content: end;
+  }
+  .nav ul {
+    flex-direction: column;
+    margin-right: 20px;
+    align-items: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    padding: 60px 0;
+    width: 100%;
+  }
+  .nav ul li {
+    font-size: relative;
+    color: white;
+    display: block;
+    margin: 5px;
+  }
+  .nav ul li a {
+    text-decoration-line: none;
+    color: white;
+    font-size: 24px;
+    padding: 5px;
+  }
+  .enlace {
+    margin: 10px;
+    padding: 5px 10px;
+    border-radius: 7px;
+  }
+  .enlace:hover {
+    background-color: #df2d2d;
+    transition: 0.3s;
+    gap: 2rem;
+  }
+  .boton {
+    background-color: #df2d2d;
+    padding: 5px 10px;
+    border-radius: 7px;
+    transition: height 2s;
+  }
+  .boton:hover {
+    background-color: #931919;
+    height: 2px;
+  }
+  /*index*/
+  .fondo_index {
+    background-image: url(../img/210996.png);
+    background-position: center;
+    background-size: cover;
+  }
+  .body_index {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: #000000;
-}
-
-.banner {
+  }
+  .banner {
     width: 100%;
     height: calc(100vh - 60px);
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.banner_textos {
+  }
+  .banner_textos {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 50px 0;
     overflow: hidden;
-}
-
-.banner_textos h1 {
+  }
+  .banner_textos h1 {
     color: white;
-    font-size: 150px;
+    font-size: 50px;
     text-align: center;
     padding: 0px 0px;
-}
-
-.contenedor2 {
+  }
+  .banner .banner_textos p {
+    font-size: 16px;
+  }
+  .contenedor2 {
     max-width: 1200px;
     margin: 0 auto;
-    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -209,17 +578,15 @@ footer button:hover {
     height: 100vh;
     background-position: center;
     background-size: cover;
-}
-
-.cards {
+  }
+  .cards {
     display: flex;
     justify-content: space-between;
     gap: 30px;
     margin: 50px;
     flex-wrap: wrap;
-}
-
-.card {
+  }
+  .card {
     display: table;
     border-radius: 25px;
     font-size: 30px;
@@ -228,278 +595,32 @@ footer button:hover {
     padding: 25px;
     text-align: center;
     overflow: hidden;
-}
-.card p{
+  }
+  .card p {
     display: table-cell;
     font-size: 26px;
     text-align: center;
     vertical-align: middle;
-}
-
-.quedicen {
+  }
+  .quedicen {
     font-size: 60px;
     color: white;
-}
-
-.texto {
+  }
+  .texto {
     color: white;
     font-size: 30px;
     text-align: center;
     margin-top: 120px;
-}
-
-h3 {
+  }
+  h3 {
     color: white;
     text-align: center;
-
-}
-
-
-@media (max-width: 1600px) {
-    .banner_textos h1 {
-        font-size: 150px;
-    }
-
-    .banner_textos p {
-        font-size: 10px;
-    }
-}
-
-@media (max-width: 1450px) {
-    .banner_textos h1 {
-        font-size: 130px;
-    }
-}
-
-@media (max-width: 1230px) {
-    .banner_textos h1 {
-        font-size: 110px;
-    }
-}
-
-@media (max-width: 1060px) {
-    .banner_textos h1 {
-        font-size: 90px;
-    }
-}
-
-.banner_textos p {
+  }
+  .banner_textos p {
     color: white;
     font-size: 30px;
     text-align: center;
+  }
 }
 
-/*Pagina Contactanos*/
-
-.fondo_contacto {
-    background-image: url(../img/pared.png);
-    background-size: cover;
-    height: 100vh;
-    overflow: hidden;
-}
-.pagina_contacto {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.web_contact {
-    color: white;
-    font-size: 60px;
-    margin-top: 50px;
-}
-.contacto {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 20px;
-}
-.contacto img {
-    border-style: ridge;
-    height: 600px;
-    width: auto;
-}
-
-.contacto fieldset {
-    font-size: large;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 600px;
-    height: 600px;
-    border-radius: 10px;
-    background-color: #c9c7c7;
-    padding: 40px 80px;
-}
-
-#nombre{
-    border-radius: 8px;
-    height: 40px;
-    width: 520px;
-}
-#mail{
-    border-radius: 8px;
-    height: 40px;
-    width: 520px;
-}
-#mensaje{
-    border-radius: 8px;
-    width: 520px;
-}
-.boton_enviar{
-    margin-top: 10px;
-    border-radius: 8px;
-    height: 50px;
-    width: 100px;
-    
-}
-
-
-/*Pagina Productos*/
-.pagina_productos {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.fondo_productos{
-    background-color: #000000;
-    background-size: cover;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.productos {
-    color: white;
-    font-size: 60px;
-    margin-top: 50px;
-}
-
-.swiper-button-prev::after {
-    font-size: 25px;
-
-}
-
-.swiper-button-next::after {
-    font-size: 25px;
-}
-
-.swiper-button-prev {
-    color: #ffffff;
-}
-
-.swiper-button-next {
-    color: #ffffff;
-}
-
-.swiper-pagination-bullet {
-    background-color: white;
-    opacity: 1;
-}
-
-.swiper-pagination-bullet-active {
-    background-color: rgb(255, 3, 3);
-    opacity: 1;
-}
-
-/*Pagina Tiendas*/
-.pagina_tiendas {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.grupo_tiendas{
-    display: flex;
-    flex-wrap: wrap;
-justify-content: space-between;
-    
-}
-.tiendas {
-    color: white;
-    font-size: 60px;
-    margin-top: 50px;
-}
-.fondo_tiendas{
-    background-color: #000000;
-    background-size: cover;
-    height: 100vh;
-    overflow: hidden;
-}
-.tienda1{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-}
-
-.tienda2{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-}
-
-.tienda3{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-}
-.tien1{
-   width: 350px;
-}
-
-.tien2{
-    width: 350px;
-}
-
-.tien3{
-    width: 350px;
-}
-
-.geo{
-    color: white;
-    font-size: 24px;
-}
-
-/*Pagina Nosotros*/
-.pagina_nosotros{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.nosotros{
-    color: white;
-    font-size: 60px;
-    margin-top: 50px;
-}
-.fondo_nosotros{
-    background-color: #000000;
-    background-size: cover;
-    height: 100vh;
-    overflow: hidden;
-}
-.principal{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
-}
-.beatles{
-    width: 600px ;
-}
-.descripcion{
-margin-left: 50px;
-font-size: 24px;
-color: white;
-}
-
-
-/*Menú responsive*/
+/*# sourceMappingURL=style.css.map */
