--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -76,32 +76,7 @@ header {
 }
 
 /*Menu responsive*/
-.logo2 {
-    width: 0;
-}
 
-#menu {
-    display: none;
-}
-
-.menu-ico {
-    width: 25px;
-}
-
-.label {
-    cursor: pointer;
-    display: none;
-}
-
-.menu {
-    position: absolute;
-    top: 20px;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    z-index: 1000;
-}
 
 /*Footer*/
 
@@ -488,83 +463,152 @@ h3 {
 @media (max-width: 422px) {
 
     /*Nav*/
+    .menu-ico {
+        display: block;
+        position: fixed;
+        right: 20px;
+        top: 30px;
+    }
+
+    .logo1 {
+        width: 50px;
+        position: fixed;
+        left: 0;
+        top: 0;
+        margin: 10px;
+    }
+
     header {
         display: flex;
         flex-direction: column;
         align-items: center;
         height: 80px;
-        background-color: #000000;
     }
-    
-    .logo1 {
-       display: 50px;
-       position: fixed;
-       left: 10px;
-    }
-    
+
     .nav {
-        margin-top: 50px;
-        width: 80%;
-        display: flex;
-        justify-content: end;
+
+        ul {
+            flex-direction: column;
+            justify-content: start;
+            margin: 0;
+            background: none;
+            position: fixed;
+            left: 0;
+            top: 60px;
+            width: 100%;
+            padding: 20px 0;
+            height: calc(100% - 60px);
+            overflow-y: auto;
+
+            left: 100%;
+            transition: left 0.3s;
+        }
     }
-    
-    .nav ul {
-        flex-direction: column;
-        margin-right: 20px;
-        align-items: center;
-       
-        position: fixed;
+
+    .nav-menu_visibe {
         left: 0;
-        top: 0;
-        padding: 60px 0;
-        width: 100%;
+    }
 
-
-    
-    }
-    
-    .nav ul li {
-        font-size: relative;
-        color: white;
-        display: block;
-        margin: 5px;
-    }
-    
-    .nav ul li a {
-        text-decoration-line: none;
-        color: white;
-        font-size: 24px;
-        padding: 5px;
-    }
-    
     .enlace {
+        background: none;
+        color: white;
         margin: 10px;
         padding: 5px 10px;
         border-radius: 7px;
     }
-    
+
     .enlace:hover {
-        background-color: #df2d2d;
-        transition: 0.3s;
+        background: none;
+        color: #df2d2d;
         gap: 2rem;
     }
-    
+
     .boton {
         background-color: #df2d2d;
         padding: 5px 10px;
         border-radius: 7px;
         transition: height 2s;
     }
-    
+
     .boton:hover {
         background-color: #931919;
         height: 2px;
     }
+    .logo2 {
+        width: 0;
+    }
     
+    #menu {
+        display: none;
+    }
+    
+    .menu-ico {
+        width: 25px;
+    }
+    
+    .label {
+        cursor: pointer;
+        display: none;
+    }
+    
+    .menu {
+        position: absolute;
+        top: 20px;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        z-index: 1000;
+    }
+    /*Footer*/
+    footer {
+
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 150px;
+        color: white;
+
+    }
+
+    footer .redes {
+        display: flex;
+        gap: 10px;
+        padding: 0;
+
+        img {
+            width: 30px;
+            height: 30px;
+        }
+    }
+
+    footer .copyright {
+        text-align: center;
+        margin: 0px;
+        font-size: 14px;
+    }
+
+    footer button {
+        border-radius: 30px;
+        border-color: #ffffff;
+        padding: 10px 20px;
+        color: white;
+        background-color: #df2d2d;
+        font-size: 70%;
+    }
+
+    footer button:hover {
+        border-radius: 30px;
+        padding: 10px 20px;
+        color: white;
+        background-color: #fd4040;
+    }
+
 
     /*index*/
-    
+
 
     .fondo_index {
         background-image: url(../img/210996.png);
@@ -579,6 +623,7 @@ h3 {
         flex-direction: column;
         justify-content: space-between;
         background-color: #000000;
+        overflow: hidden;
     }
 
     .banner {
@@ -593,13 +638,13 @@ h3 {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 50px 0;
+        padding: 50px;
         overflow: hidden;
     }
 
     .banner_textos h1 {
         color: white;
-        font-size: 50px;
+        font-size: 40px;
         text-align: center;
         padding: 0px 0px;
     }
@@ -620,7 +665,7 @@ h3 {
         flex-direction: column;
         justify-content: space-between;
         background-color: #000000;
-        height: 100vh;
+        height: 100%;
         background-position: center;
         background-size: cover;
     }
@@ -666,7 +711,8 @@ h3 {
     h3 {
         color: white;
         text-align: center;
-
+        font-size: 20px;
+        padding: 0 50px;
     }
 
     .banner_textos p {
