--- a/style/scss/screens/_full.scss
+++ b/style/scss/screens/_full.scss
@@ -125,7 +125,11 @@ footer button:hover {
     background-position: center;
     background-size: cover;
 }
-
+.fondo_index2 {
+    background-color: #000000;
+    background-position: center;
+    background-size: cover;
+}
 .body_index {
     display: flex;
     flex-direction: column;
