--- a/style/scss/screens/_576.scss
+++ b/style/scss/screens/_576.scss
@@ -160,6 +160,7 @@
         flex-direction: column;
         justify-content: space-between;
         background-color: #000000;
+        height: auto;
         overflow: hidden;
 
         .fondo_index {
@@ -175,6 +176,7 @@
                 }
 
                 .banner {
+                    margin: 0 auto;
                     max-width: 500px;
                     height: calc(100vh - 60px);
                     display: flex;
@@ -203,6 +205,13 @@
                     }
                 }
             }
+        }
+
+        .fondo_index2 {
+            background-color: #000000;
+
+            background-size: cover;
+
 
             .contenedor2 {
                 max-width: 500px;
@@ -212,24 +221,37 @@
                 justify-content: center;
                 align-items: center;
                 background-color: #000000;
-                height: 100%;
+
                 background-position: center;
                 background-size: cover;
+
+                .texto {
+                    color: white;
+                    font-size: 30px;
+                    text-align: center;
+                    margin-top: 40px;
+                    max-width: 500px;
+
+                    .quedicen {
+                        font-size: 40px;
+                        color: white;
+                        text-align: center;
+
+                    }
+                }
 
                 .cards {
                     display: flex;
                     flex-direction: column;
-                    justify-content: center;
                     align-items: center;
                     gap: 30px;
-                    margin: 50px;
+                    margin: 30px;
 
                     .card {
                         display: table;
                         border-radius: 25px;
-                        font-size: 30px;
-                        height: 300px;
-                        width: 320px;
+                        height: 130px;
+                        width: 300px;
                         padding: 25px;
                         text-align: center;
                         overflow: hidden;
@@ -237,45 +259,17 @@
 
                     .card p {
                         display: table-cell;
-                        font-size: 26px;
+                        font-size: 18px;
                         text-align: center;
                         vertical-align: middle;
                     }
-                }
 
-
-
-                .texto {
-                    color: white;
-                    font-size: 30px;
-                    text-align: center;
-                    margin-top: 120px;
-
-                    .quedicen {
-                        font-size: 60px;
-                        color: white;
-                    }
                 }
 
                 h3 {
-                    color: white;
-                    text-align: center;
-                    font-size: 20px;
-                    padding: 0 50px;
+                    max-width: 350px;
                 }
 
-                .banner_textos p {
-                    color: white;
-                    font-size: 30px;
-                    text-align: center;
-                }
-
-                .banner_textos h1 {
-                    color: white;
-                    font-size: 60px;
-                    text-align: center;
-                    padding: 0px 0px;
-                }
             }
         }
     }
@@ -395,15 +389,56 @@
         }
     }
 
+    /*Pagina Nosotros responsive*/
+    .pagina_nosotros {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        max-width: 450px;
+        margin: 0 auto;
+    }
 
+    .nosotros {
+        color: white;
+        font-size: 60px;
+        margin: 20px 0;
+    }
 
+    .fondo_nosotros {
+        background-color: #000000;
+        background-size: cover;
+        height: 100%;
+
+    }
+
+    .principal {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+    }
+
+    .beatles {
+        height: auto;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .descripcion {
+        margin: 20px 0;
+        font-size: 24px;
+        color: white;
+        display: flex;
+        text-align: center;
+
+    }
 
     /*Pagina Tiendas responsive*/
 
     .pagina_tiendas {
         display: flex;
         flex-direction: column;
-        max-width: 400px;
+        max-width: 450px;
         margin: 0 auto;
     }
 
@@ -433,7 +468,8 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 40px;
+        margin-top: 20px;
+        margin-bottom: 30px;
         padding: none;
     }
 
@@ -443,7 +479,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 20px;
-        margin-bottom: 40px;
+        margin: 30px 0;
     }
 
     .tienda3 {
@@ -452,6 +488,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 20px;
+        margin: 30px 0;
     }
 
     .tien1 {
@@ -472,49 +509,6 @@
         margin-bottom: none;
     }
 
-    /*Pagina Nosotros responsive*/
-    .pagina_nosotros {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        max-width: 450px;
-        margin: 0 auto;
-    }
-
-    .nosotros {
-        color: white;
-        font-size: 60px;
-        margin-top: 20px;
-    }
-
-    .fondo_nosotros {
-        background-color: #000000;
-        background-size: cover;
-        height: 100%;
-
-    }
-
-    .principal {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-
-    }
-
-    .beatles {
-        height: auto;
-        width: 100%;
-    }
-
-    .descripcion {
-        margin: 20px 0;
-        font-size: 24px;
-        color: white;
-        display: flex;
-        text-align: center;
-
-    }
-
     /*Pagina Contactanos responsive*/
 
     .fondo_contacto {
@@ -522,84 +516,79 @@
         background-size: cover;
         height: 100%;
 
-    }
 
-    .pagina_contacto {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: space-between;
-        overflow-y: auto;
-        max-width: 1920px;
-        min-width: 576px;
-    }
 
-    .web_contact {
-        text-align: center;
-        color: white;
-        font-size: 50px;
-        margin-top: 10px;
-    }
+        .pagina_contacto {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            justify-content: space-between;
+            overflow-y: auto;
+            max-width: 450px;
 
-    .contacto {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        padding-top: 20px;
-        gap: 30px;
-    }
+            .web_contact {
+                text-align: center;
+                color: white;
+                font-size: 50px;
+                margin-top: 10px;
+            }
 
-    .contacto img {
-        border-style: ridge;
-        height: auto;
-        width: 350px;
-    }
+            .contacto {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+                padding-top: 20px;
+                gap: 30px;
 
-    .contacto fieldset {
-        font-size: large;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        width: 350px;
-        height: 420px;
-        border-radius: 10px;
-        background-color: #c9c7c7;
-        padding: 40px 80px;
-        margin-bottom: 30px;
-    }
+                .fieldset {
+                    font-size: large;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 350px;
+                    height: 420px;
+                    border-radius: 10px;
+                    background-color: #c9c7c7;
+                    padding: 40px 80px;
+                    margin-bottom: 30px;
 
-    label {
-        font-size: 14px;
-        padding: 5px;
-    }
+                    label {
+                        font-size: 14px;
+                        padding: 5px;
+                    }
 
-    #nombre {
-        border-radius: 8px;
-        height: 40px;
-        width: 330px;
-    }
+                    #nombre {
+                        border-radius: 8px;
+                        height: 40px;
+                        width: 330px;
+                    }
 
-    #mail {
-        border-radius: 8px;
-        height: 40px;
-        width: 330px;
-    }
+                    #mail {
+                        border-radius: 8px;
+                        height: 40px;
+                        width: 330px;
+                    }
 
-    #mensaje {
-        border-radius: 8px;
-        height: 200px;
-        width: 330px;
+                    #mensaje {
+                        border-radius: 8px;
+                        height: 200px;
+                        width: 330px;
+                    }
 
-    }
+                    .boton_enviar {
+                        margin-top: 10px;
+                        border-radius: 8px;
+                        height: 50px;
+                        width: 100px;
 
-    .boton_enviar {
-        margin-top: 10px;
-        border-radius: 8px;
-        height: 50px;
-        width: 100px;
+                    }
+                }
 
+
+            }
+        }
     }
 
 
