--- a/style/style.css
+++ b/style/style.css
@@ -129,6 +129,12 @@ footer button:hover {
   background-size: cover;
 }
 
+.fondo_index2 {
+  background-color: #000000;
+  background-position: center;
+  background-size: cover;
+}
+
 .body_index {
   display: flex;
   flex-direction: column;
@@ -1090,6 +1096,7 @@ a {
     flex-direction: column;
     justify-content: space-between;
     background-color: #000000;
+    height: auto;
     overflow: hidden;
   }
   .body_index .fondo_index {
@@ -1101,6 +1108,7 @@ a {
     padding: 0 70px;
   }
   .body_index .fondo_index .contenedor1 .banner {
+    margin: 0 auto;
     max-width: 500px;
     height: calc(100vh - 60px);
     display: flex;
@@ -1125,7 +1133,11 @@ a {
   .body_index .fondo_index .contenedor1 .banner .banner_textos p {
     font-size: 20px;
   }
-  .body_index .fondo_index .contenedor2 {
+  .body_index .fondo_index2 {
+    background-color: #000000;
+    background-size: cover;
+  }
+  .body_index .fondo_index2 .contenedor2 {
     max-width: 500px;
     margin: 0 auto;
     display: flex;
@@ -1133,60 +1145,45 @@ a {
     justify-content: center;
     align-items: center;
     background-color: #000000;
-    height: 100%;
     background-position: center;
     background-size: cover;
   }
-  .body_index .fondo_index .contenedor2 .cards {
+  .body_index .fondo_index2 .contenedor2 .texto {
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 40px;
+    max-width: 500px;
+  }
+  .body_index .fondo_index2 .contenedor2 .texto .quedicen {
+    font-size: 40px;
+    color: white;
+    text-align: center;
+  }
+  .body_index .fondo_index2 .contenedor2 .cards {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 30px;
-    margin: 50px;
+    margin: 30px;
   }
-  .body_index .fondo_index .contenedor2 .cards .card {
+  .body_index .fondo_index2 .contenedor2 .cards .card {
     display: table;
     border-radius: 25px;
-    font-size: 30px;
-    height: 300px;
-    width: 320px;
+    height: 130px;
+    width: 300px;
     padding: 25px;
     text-align: center;
     overflow: hidden;
   }
-  .body_index .fondo_index .contenedor2 .cards .card p {
+  .body_index .fondo_index2 .contenedor2 .cards .card p {
     display: table-cell;
-    font-size: 26px;
+    font-size: 18px;
     text-align: center;
     vertical-align: middle;
   }
-  .body_index .fondo_index .contenedor2 .texto {
-    color: white;
-    font-size: 30px;
-    text-align: center;
-    margin-top: 120px;
-  }
-  .body_index .fondo_index .contenedor2 .texto .quedicen {
-    font-size: 60px;
-    color: white;
-  }
-  .body_index .fondo_index .contenedor2 h3 {
-    color: white;
-    text-align: center;
-    font-size: 20px;
-    padding: 0 50px;
-  }
-  .body_index .fondo_index .contenedor2 .banner_textos p {
-    color: white;
-    font-size: 30px;
-    text-align: center;
-  }
-  .body_index .fondo_index .contenedor2 .banner_textos h1 {
-    color: white;
-    font-size: 60px;
-    text-align: center;
-    padding: 0px 0px;
+  .body_index .fondo_index2 .contenedor2 h3 {
+    max-width: 350px;
   }
   /*Pagina Productos responsive*/
   .fondo_productos {
@@ -1279,11 +1276,46 @@ a {
     color: white;
     font-size: 24px;
   }
+  /*Pagina Nosotros responsive*/
+  .pagina_nosotros {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 450px;
+    margin: 0 auto;
+  }
+  .nosotros {
+    color: white;
+    font-size: 60px;
+    margin: 20px 0;
+  }
+  .fondo_nosotros {
+    background-color: #000000;
+    background-size: cover;
+    height: 100%;
+  }
+  .principal {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .beatles {
+    height: auto;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .descripcion {
+    margin: 20px 0;
+    font-size: 24px;
+    color: white;
+    display: flex;
+    text-align: center;
+  }
   /*Pagina Tiendas responsive*/
   .pagina_tiendas {
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    max-width: 450px;
     margin: 0 auto;
   }
   .grupo_tiendas {
@@ -1307,7 +1339,8 @@ a {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     padding: none;
   }
   .tienda2 {
@@ -1316,7 +1349,7 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    margin-bottom: 40px;
+    margin: 30px 0;
   }
   .tienda3 {
     display: flex;
@@ -1324,6 +1357,7 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    margin: 30px 0;
   }
   .tien1 {
     width: 350px;
@@ -1339,62 +1373,27 @@ a {
     font-size: 24px;
     margin-bottom: none;
   }
-  /*Pagina Nosotros responsive*/
-  .pagina_nosotros {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 450px;
-    margin: 0 auto;
-  }
-  .nosotros {
-    color: white;
-    font-size: 60px;
-    margin-top: 20px;
-  }
-  .fondo_nosotros {
-    background-color: #000000;
-    background-size: cover;
-    height: 100%;
-  }
-  .principal {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .beatles {
-    height: auto;
-    width: 100%;
-  }
-  .descripcion {
-    margin: 20px 0;
-    font-size: 24px;
-    color: white;
-    display: flex;
-    text-align: center;
-  }
   /*Pagina Contactanos responsive*/
   .fondo_contacto {
     background-image: url(../img/pared.png);
     background-size: cover;
     height: 100%;
   }
-  .pagina_contacto {
+  .fondo_contacto .pagina_contacto {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
     overflow-y: auto;
-    max-width: 1920px;
-    min-width: 576px;
+    max-width: 450px;
   }
-  .web_contact {
+  .fondo_contacto .pagina_contacto .web_contact {
     text-align: center;
     color: white;
     font-size: 50px;
     margin-top: 10px;
   }
-  .contacto {
+  .fondo_contacto .pagina_contacto .contacto {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -1402,12 +1401,7 @@ a {
     padding-top: 20px;
     gap: 30px;
   }
-  .contacto img {
-    border-style: ridge;
-    height: auto;
-    width: 350px;
-  }
-  .contacto fieldset {
+  .fondo_contacto .pagina_contacto .contacto .fieldset {
     font-size: large;
     display: flex;
     flex-direction: column;
@@ -1420,26 +1414,26 @@ a {
     padding: 40px 80px;
     margin-bottom: 30px;
   }
-  label {
+  .fondo_contacto .pagina_contacto .contacto .fieldset label {
     font-size: 14px;
     padding: 5px;
   }
-  #nombre {
+  .fondo_contacto .pagina_contacto .contacto .fieldset #nombre {
     border-radius: 8px;
     height: 40px;
     width: 330px;
   }
-  #mail {
+  .fondo_contacto .pagina_contacto .contacto .fieldset #mail {
     border-radius: 8px;
     height: 40px;
     width: 330px;
   }
-  #mensaje {
+  .fondo_contacto .pagina_contacto .contacto .fieldset #mensaje {
     border-radius: 8px;
     height: 200px;
     width: 330px;
   }
-  .boton_enviar {
+  .fondo_contacto .pagina_contacto .contacto .fieldset .boton_enviar {
     margin-top: 10px;
     border-radius: 8px;
     height: 50px;
